cambio en nombre

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     <!-- Contenedor principal para la primera sección -->
     <div class="caja1">
         <!-- Título principal de la página -->
-        <div class="titulo">Welcome to GymBody: Your Ultimate Fitness <br> Companion</div>
+        <div class="titulo">Welcome to GymBuddie: Your Ultimate Fitness <br> Companion</div>
         <!-- Texto descriptivo de bienvenida -->
         <div class="texto1">
             <p>At GymBody, we are dedicated to making exercise easier and more accessible for everyone. Whether you're a
