img names and src

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
         <!-- Contenedor de la imagen -->
         <div class="imagen1">
             <!-- Imagen decorativa -->
-            <img src="{{ url_for('static', filename='imgs/gymmode.png') }}" alt="ej1">
+            <img src="static\imgs\gymmode.png" alt="ej1">
         </div>
     </div>
 
@@ -62,7 +62,7 @@
 
     <!-- Imagen en la esquina de la página -->
     <div class="corner-image">
-        <img src="{{ url_for('static', filename='imgs/muscle1.png') }}" alt="Corner Image">
+        <img src="static\imgs\muscle1.png" alt="Corner Image">
     </div>
 </body>
 
