--- a/templates/main.html
+++ b/templates/main.html
@@ -34,7 +34,7 @@
     <div class="result-container">
         <div id="resultado" class="resultado"></div> <!-- Div para mostrar el resultado de la optimización -->
         <div class="imagen2">
-            <img src="{{ url_for('static', filename='imgs/muscle2.png') }}" alt="ej2"> <!-- Imagen decorativa -->
+            <img src="static\imgs\muscle2.png" alt="ej2"> <!-- Imagen decorativa -->
         </div>
     </div>
 
