--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         <div class="titulo">Welcome to GymBuddie: Your Ultimate Fitness <br> Companion</div>
         <!-- Texto descriptivo de bienvenida -->
         <div class="texto1">
-            <p>At GymBody, we are dedicated to making exercise easier and more accessible for everyone. Whether you're a
+            <p>At GymBoddie, we are dedicated to making exercise easier and more accessible for everyone. Whether you're a
                 seasoned athlete or <br>just beginning your fitness journey, GymBody is here to support and guide you
                 every
                 step of the way.</p>
